--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ requires-python = ">=3.11"
 dependencies = [
     "bleak>=0.21",
     "click>=8.0",
+    "numpy>=1.26",
+    "scipy>=1.12",
 ]
 
 [project.scripts]
